--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html>
 
   <head><!-- where all the meta data will go, like and files we need to include -->
+    <meta charset="UTF-8"><!-- this tells the browser what character set to use -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- this makes sure the page is responsive on mobile devices -->
+    <link rel="stylesheet" href="./main.css" /><!-- this links to our CSS file -->
     <title>My Little Rainbow</title><!-- the title is what appears on your tab -->
   </head>
 
   <body><!-- the body element is where everything we will see on the page will go -->
 
     <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div>
-                <div></div> <!-- the grandest child div -->
+    <div id="red"> <!-- the grandest grandparent div -->
+      <div id="orange"> <!-- the grandparent div -->
+        <div id="yellow">
+          <div id="green">
+            <div id="blue">
+              <div id="indigo">
+                <div id="violet"></div> <!-- the grandest child div -->
               </div>
             </div>
           </div>
